Fixed screensaver on mobile.

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -196,4 +196,13 @@
  */
 .screensaver {
   @extend %fixed-bg;
+
+  display: none;
+
+  &.js-active {
+
+    @media (min-width: $mq-md) {
+      display: block;
+    }
+  }
 }
