--- a/_sass/_extends.scss
+++ b/_sass/_extends.scss
@@ -27,7 +27,6 @@
   left: 0;
   z-index: 999;
 
-  display: none;
   height: 100%;
   width: 100%;
 
